--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -995,17 +995,23 @@ function timeline() {
         "type"  : "milestone",
         "shortDesc" : "Initial co-design development",
         "offset" : 0,
-        "note" : "Teachers worked with researchers to design the tool, including collaboration with Jim Slotta and Ontario Institute of Studies in Education" },
+        "note" : "Teachers from Dawson College, John Abbott College, and Vanier College collaborated with Jim Slotta and the Ontario Institute of Studies in Education to design the tool" },
       { "year" : "2010",
         "type"  : "software",
         "shortDesc" : "First major release",
         "offset" : 0,
-        "note" : "Beta version of php app for Asynchronous Peer Instruction (AsPI)" },
+        "note" : "Beta version of PHP app for Asynchronous Peer Instruction (AsPI) deployed" },
       { "year" : "2013.7",
         "type"  : "publication",
         "shortDesc" : "First major study",
         "offset" : 0,
-        "note" : "Quasi-experimental study of effectiveness of AsPI with five physics teachers across three colleges" },
+        "note" : "\'Quasi-experimental study of effectiveness of AsPI with five physics teachers across three colleges\'" },
+      { "year" : "2014.5",
+        "type"  : "publication",
+        "shortDesc" : "11th International Conference on LS",
+        "offset" : -17,
+        "note" : "Charles, E.S, Whittaker, C., Lasry, N., Dugdale, M., Lenton, K., Bhatnagar, S., Guillemette, J. \'Taking DALITE To the Next Level: What have we learned from a web-based peer instruction application\'.  Proceedings of the 11th International Conference of the Learning Sciences (ICLS 2014), June 23-27, 2014, Boulder, US.",
+        "link" : "https://www.isls.org/icls/2014/Proceedings.html" },
       { "year" : "2015",
         "type"  : "publication",
         "shortDesc" : "ARC Conference",
@@ -1019,56 +1025,56 @@ function timeline() {
         "note" : "Completely re-written by HarvardX as an open-source LTI compliant tool" },
       { "year" : "2015.4",
         "type"  : "publication",
-        "shortDesc" : "8th International Conference on EDM",
-        "offset" : -12,
-        "note" : "Full citation...",
-        "link" : "https://files.eric.ed.gov/fulltext/ED560883.pdf" },
-      { "year" : "2015.6",
-        "type"  : "publication",
         "shortDesc" : "CSCL 2015 Conference",
-        "offset" : -6,
-        "note" : "Full citation...",
+        "offset" : -12,
+        "note" : "Charles, E.S., Lasry N., Whittaker,C., Dugdale,M., Lenton,K., Bhatnagar, S., Guillemette, J., \'Beyond and Within Classroom Walls: Designing Principled Pedagogical Tools for Student and Faculty Uptake\'. Proceedings of the 11th International Conference on Computer Collaborative Learning, June 7-11, 2015, Gothenburg, Sweden. ",
         "link" : "https://www.isls.org/cscl2015/papers/MC-0280-FullPaper-Charles.pdf" },
+      { "year" : "2015.5",
+        "type"  : "publication",
+        "shortDesc" : "8th International Conference on EDM",
+        "offset" : -2,
+        "note" : "Bhatnagar, S., Desmarais, M.C., Whittaker C., Lasry N., Dugdale M., Lenton K., Charles E., \'An analysis of peer-written and peer-reviewed rationales from an asynchronous peer-instruction learning environment\'. 2015 International Conference on Educational Data Mining, June 26-29, Madrid, Spain.",
+        "link" : "https://files.eric.ed.gov/fulltext/ED560883.pdf" },
       { "year" : "2015.8",
         "type"  : "use",
         "shortDesc" : "HarvardX MOOC on Justice",
         "offset" : 1,
-        "note" : "About the course",
+        "note" : "\'Justice, one of the most famous courses taught at Harvard College, is an introduction to moral and political philosophy, offering an opportunity to discuss contemporary dilemmas and controversies\'",
         "link" : "https://www.edx.org/course/justice-harvardx-er22-1x-2" },
       { "year" : "2016.25",
         "type"  : "use",
         "shortDesc" : "MITx physics MOOC",
         "offset" : -2,
-        "note" : "About the course...",
+        "note" : "\'This is a college-level Introductory Newtonian Mechanics course designed for both students and teachers\'",
         "link" : "https://www.edx.org/course/advanced-introductory-classical-mitx-8-mechcx-0" },
-      { "year" : "2016.5",
+      { "year" : "2016.7",
+        "type"  : "use",
+        "shortDesc" : "McGillx MOOC on Injury Prevention",
+        "offset" : -5,
+        "note" : "\'Learn from leading global experts about the benefits of physical activity and how to prevent and treat injuries\'",
+        "link" : "https://www.edx.org/course/body-matters-why-exercise-makes-you-mcgillx-body101x-0" },
+      { "year" : "2016.85",
         "type"  : "publication",
         "shortDesc" : "EC-TEL 2016 Conference",
         "offset" : 3,
-        "note" : "Full citation...",
+        "note" : "Bhatnagar, S., Lasry, N., Desmarais, M.C.,Charles, E.S., \'DALITE: Asynchronous Peer Instruction for MOOCs\'. 11th European Conference on Technology Enhanced Learning Adaptive and Adaptable Learning (EC-TEL 2016), September 13-16 2016, Lyon, France.",
         "link" : "http://www.professeurs.polymtl.ca/michel.desmarais/Publications-Michel/EC-TEL_2016_paper_201.pdf" },
-      { "year" : "2016.75",
-        "type"  : "use",
-        "shortDesc" : "McGillx MOOC on Injury Prevention",
-        "offset" : 7,
-        "note" : "About the course...",
-        "link" : "https://www.edx.org/course/body-matters-why-exercise-makes-you-mcgillx-body101x-0" },
       { "year" : "2017",
         "type"  : "use",
         "shortDesc" : "CalTech MOOC on Quantum Cryptography",
         "offset" : 11,
-        "note" : "About the course...",
+        "note" : "\'Learn how quantum communication provides security that is guaranteed by the laws of nature\'",
         "link" : "https://www.edx.org/course/quantum-cryptography-caltechx-delftx-qucryptox-0" },
       { "year" : "2018.42",
         "type" : "software",
         "shortDesc" : "Third major release",
         "offset" : 0,
-        "note" : "Extended from an LTI tool to a modern stable web app in preparation for use by practitioners"},
+        "note" : "Extended from an LTI tool to a modern web app in preparation for widespread use by practitioners"},
       { "year" : "2018.75",
         "type" : "event",
-        "shortDesc" : "New features",
+        "shortDesc" : "New feature development",
         "offset" : 0,
-        "note" : "Development of new features: Content authoring, better analytics, stand-alone functionality outside of an LTI environment"},
+        "note" : "Content authoring, better analytics, stand-alone functionality outside of an LTI environment, and more..."},
   ]
 };
 
@@ -1147,6 +1153,22 @@ g.append('path')
     .attr('fill', 'white')
     .attr('stroke', function(d) { return c(d.type); });
 
+    var descriptions = g.append('g')
+      .selectAll('.description')
+      .data(timelineData.events)
+      .enter().append('text')
+      .attr('class', 'description')
+      .attr('id', function(d) { return "description_"+d.year.replace('.','_'); })
+      .attr('x', 21)
+      .attr('y', function(d) { return y(d.year); })
+      .attr('dy', function(d) { return 25+d.offset; })
+      .attr('text-anchor', 'start')
+      .style('font-size', '10pt')
+      .style('opacity', 0)
+      .attr('fill', function(d) { return c(d.type); })
+      .text(function(d) {return (d.note);})
+      .call(bundle.wrap, 0.7*innerWidth);
+
   var notes = g.append('g')
     .selectAll('.timelineLabel')
     .data(timelineData.events)
@@ -1168,22 +1190,6 @@ g.append('path')
       location = d.link;
     }
   })
-
-  var descriptions = g.append('g')
-    .selectAll('.description')
-    .data(timelineData.events)
-    .enter().append('text')
-    .attr('class', 'description')
-    .attr('id', function(d) { return "description_"+d.year.replace('.','_'); })
-    .attr('x', 21)
-    .attr('y', function(d) { return y(d.year); })
-    .attr('dy', function(d) { return 25+d.offset; })
-    .attr('text-anchor', 'start')
-    .style('font-size', '10pt')
-    .style('opacity', 0)
-    .attr('fill', function(d) { return c(d.type); })
-    .text(function(d) {return (d.note);})
-    .call(bundle.wrap, 0.7*innerWidth);
 
   events.on('mouseover', function(d) {
     var exclude = "label_"+d.year.replace('.','_');
