compress JAC logo

--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -358,7 +358,7 @@ styleSheet.insertRule(".mdc-toolbar--flexible {--mdc-toolbar-ratio-to-extend-fle
         <a href="http://www.dawsoncollege.qc.ca"><img class="mdc-image-list__image school-logo" src="{% static 'peerinst/img/Dawson-logo.png' %}"></a>
       </li>
       <li class="mdc-image-list__item">
-        <a href="http://www.johnabbott.qc.ca"><img class="mdc-image-list__image school-logo" src="{% static 'peerinst/img/JAC-logo.png' %}"></a>
+        <a href="http://www.johnabbott.qc.ca"><img class="mdc-image-list__image school-logo" src="{% static 'peerinst/img/JAC-logo-2.gif' %}"></a>
       </li>
       <li class="mdc-image-list__item">
         <a href="http://www.vaniercollege.qc.ca"><img class="mdc-image-list__image school-logo" src="{% static 'peerinst/img/Vanier-logo.png' %}"></a>
