--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -1008,15 +1008,15 @@ function timeline() {
         "note" : "\'Quasi-experimental study of effectiveness of AsPI with five physics teachers across three colleges\'" },
       { "year" : "2014.5",
         "type"  : "publication",
-        "shortDesc" : "11th International Conference on LS",
+        "shortDesc" : "11th Int. Conference on LS",
         "offset" : -17,
         "note" : "Charles, E.S, Whittaker, C., Lasry, N., Dugdale, M., Lenton, K., Bhatnagar, S., Guillemette, J. \'Taking DALITE To the Next Level: What have we learned from a web-based peer instruction application\'.  Proceedings of the 11th International Conference of the Learning Sciences (ICLS 2014), June 23-27, 2014, Boulder, US.",
         "link" : "https://www.isls.org/icls/2014/Proceedings.html" },
       { "year" : "2015",
         "type"  : "publication",
-        "shortDesc" : "ARC Conference",
+        "shortDesc" : "Colloque de l’ARC 2015",
         "offset" : -23,
-        "note" : "Full citation...",
+        "note" : "Charles, E.S, Lasry, N., Whittaker, C., Dugdale, M., Lenton, K., Bhatnagar, S., \'Les retombées de DALITE\'.  27 mai 2015, Rimouski, Québec.",
         "link" : "https://dspacecdc-test.inlibro.net/xmlui/bitstream/handle/11515/34789/CHARLES-E-et-coll_2015_Affiche.pdf?sequence=1&isAllowed=y" },
       { "year" : "2015.2",
         "type"  : "software",
@@ -1031,7 +1031,7 @@ function timeline() {
         "link" : "https://www.isls.org/cscl2015/papers/MC-0280-FullPaper-Charles.pdf" },
       { "year" : "2015.5",
         "type"  : "publication",
-        "shortDesc" : "8th International Conference on EDM",
+        "shortDesc" : "8th Int. Conference on EDM",
         "offset" : -2,
         "note" : "Bhatnagar, S., Desmarais, M.C., Whittaker C., Lasry N., Dugdale M., Lenton K., Charles E., \'An analysis of peer-written and peer-reviewed rationales from an asynchronous peer-instruction learning environment\'. 2015 International Conference on Educational Data Mining, June 26-29, Madrid, Spain.",
         "link" : "https://files.eric.ed.gov/fulltext/ED560883.pdf" },
