trans tags for timeline

--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -993,17 +993,17 @@ function timeline() {
     "events" : [
       { "year" : "2008",
         "type"  : "milestone",
-        "shortDesc" : "Initial co-design development",
+        "shortDesc" : "{% trans 'Initial co-design development' %}",
         "offset" : 0,
-        "note" : "Teachers from Dawson College, John Abbott College, and Vanier College collaborated with Jim Slotta and the Ontario Institute of Studies in Education to design the tool" },
+        "note" : "{% trans 'Teachers from Dawson College, John Abbott College, and Vanier College collaborated with Jim Slotta and the Ontario Institute of Studies in Education to design the tool' %}" },
       { "year" : "2010",
         "type"  : "software",
-        "shortDesc" : "First major release",
+        "shortDesc" : "{% trans 'First major release' %}",
         "offset" : 0,
-        "note" : "Beta version of PHP app for Asynchronous Peer Instruction (AsPI) deployed" },
+        "note" : "{% trans 'Beta version of PHP app for Asynchronous Peer Instruction (AsPI) deployed' %}" },
       { "year" : "2013.7",
         "type"  : "publication",
-        "shortDesc" : "First major study",
+        "shortDesc" : "{% trans 'First major study' %}",
         "offset" : 0,
         "note" : "\'Quasi-experimental study of effectiveness of AsPI with five physics teachers across three colleges\'" },
       { "year" : "2014.5",
@@ -1020,9 +1020,9 @@ function timeline() {
         "link" : "https://dspacecdc-test.inlibro.net/xmlui/bitstream/handle/11515/34789/CHARLES-E-et-coll_2015_Affiche.pdf?sequence=1&isAllowed=y" },
       { "year" : "2015.2",
         "type"  : "software",
-        "shortDesc" : "Second major release",
+        "shortDesc" : "{% trans 'Second major release' %}",
         "offset" : -18,
-        "note" : "Completely re-written by HarvardX as an open-source LTI compliant tool" },
+        "note" : "{% trans 'Completely re-written by HarvardX as an open-source LTI compliant tool' %}" },
       { "year" : "2015.4",
         "type"  : "publication",
         "shortDesc" : "CSCL 2015 Conference",
@@ -1037,19 +1037,19 @@ function timeline() {
         "link" : "https://files.eric.ed.gov/fulltext/ED560883.pdf" },
       { "year" : "2015.8",
         "type"  : "use",
-        "shortDesc" : "HarvardX MOOC on Justice",
+        "shortDesc" : "HarvardX MOOC - Justice",
         "offset" : 1,
         "note" : "\'Justice, one of the most famous courses taught at Harvard College, is an introduction to moral and political philosophy, offering an opportunity to discuss contemporary dilemmas and controversies\'",
         "link" : "https://www.edx.org/course/justice-harvardx-er22-1x-2" },
       { "year" : "2016.25",
         "type"  : "use",
-        "shortDesc" : "MITx physics MOOC",
+        "shortDesc" : "MITx MOOC - Physics",
         "offset" : -2,
         "note" : "\'This is a college-level Introductory Newtonian Mechanics course designed for both students and teachers\'",
         "link" : "https://www.edx.org/course/advanced-introductory-classical-mitx-8-mechcx-0" },
       { "year" : "2016.7",
         "type"  : "use",
-        "shortDesc" : "McGillx MOOC on Injury Prevention",
+        "shortDesc" : "McGillx MOOC - Injury Prevention",
         "offset" : -5,
         "note" : "\'Learn from leading global experts about the benefits of physical activity and how to prevent and treat injuries\'",
         "link" : "https://www.edx.org/course/body-matters-why-exercise-makes-you-mcgillx-body101x-0" },
@@ -1061,20 +1061,20 @@ function timeline() {
         "link" : "http://www.professeurs.polymtl.ca/michel.desmarais/Publications-Michel/EC-TEL_2016_paper_201.pdf" },
       { "year" : "2017",
         "type"  : "use",
-        "shortDesc" : "CalTech MOOC on Quantum Cryptography",
+        "shortDesc" : "CalTech MOOC - Quantum Cryptography",
         "offset" : 11,
         "note" : "\'Learn how quantum communication provides security that is guaranteed by the laws of nature\'",
         "link" : "https://www.edx.org/course/quantum-cryptography-caltechx-delftx-qucryptox-0" },
       { "year" : "2018.42",
         "type" : "software",
-        "shortDesc" : "Third major release",
+        "shortDesc" : "{% trans 'Third major release' %}",
         "offset" : 0,
-        "note" : "Extended from an LTI tool to a modern web app in preparation for widespread use by practitioners"},
+        "note" : "{% trans 'Extended from an LTI tool to a modern web app in preparation for widespread use by practitioners' %}"},
       { "year" : "2018.75",
         "type" : "event",
-        "shortDesc" : "New feature development",
+        "shortDesc" : "{% trans 'New feature development' %}",
         "offset" : 0,
-        "note" : "Content authoring, better analytics, stand-alone functionality outside of an LTI environment, and more..."},
+        "note" : "{% trans 'Content authoring, better analytics, stand-alone functionality outside of an LTI environment, and more...' %}"},
   ]
 };
 
@@ -1113,7 +1113,7 @@ g.append('text')
   .attr('dy', 3)
   .attr('font-size', '7pt')
   .attr('fill', 'gray')
-  .text('Click/hover to expand');
+  .text("{% trans 'Click/hover to expand' %}");
 
 g.append('path')
   .attr('stroke', 'gray')
